--- a/bitproject/pubspec.yaml
+++ b/bitproject/pubspec.yaml
@@ -1,19 +1,37 @@
-name: bitproject
+name: medicalapp
 description: A new Flutter project.
 publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: '>=3.1.5 <4.0.0'
+  sdk: '>=3.0.5 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.13.4
+  intl: ^0.18.1
+  image_picker: ^0.8.7
+  provider: ^6.0.5
+
+  firebase_auth: ^4.12.0
+  cloud_firestore: ^4.9.3
+  firebase_core: ^2.17.0
+  date_format: ^2.0.7
+
+  shared_preferences: ^2.2.2
+  url_launcher: ^6.2.1
+  flutter_blue_plus: ^1.3.0
+  flutter_bluetooth_serial_ble: ^0.5.0
+  scoped_model: ^2.0.0
+  scroll_date_picker: ^3.7.3
+  flutter_native_splash: ^2.3.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+
 
 flutter:
   uses-material-design: true
