--- a/bitproject/android/app/build.gradle
+++ b/bitproject/android/app/build.gradle
@@ -41,11 +41,12 @@ android {
     }
 
     defaultConfig {
+        minSdkVersion 21  
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.bitproject"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
