--- a/bitproject/android/app/src/main/AndroidManifest.xml
+++ b/bitproject/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.BLUETOOTH_SCAN"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <queries>
+        <!-- If your app checks for SMS support -->
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <data android:scheme="https" />
+        </intent>
+    </queries>
     <application
-        android:label="bitproject"
+        android:label="헬스체커"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
