--- a/bitproject/pubspec.yaml
+++ b/bitproject/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: '>=3.0.5 <4.0.0'
+  sdk: '>=3.2.0 <4.0.0'
 
 dependencies:
   flutter:
@@ -24,6 +24,9 @@ dependencies:
   scoped_model: ^2.0.0
   scroll_date_picker: ^3.7.3
   flutter_native_splash: ^2.3.5
+  get: ^4.6.6
+  rxdart: ^0.27.0
+  fl_chart: ^0.65.0
 
 dev_dependencies:
   flutter_test:
