--- a/bitproject/android/app/src/main/AndroidManifest.xml
+++ b/bitproject/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         </intent>
     </queries>
     <application
-        android:label="헬스체커"
+        android:label="FunBit"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
