--- a/bitproject/pubspec.yaml
+++ b/bitproject/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   rxdart: ^0.27.0
   fl_chart: ^0.65.0
   dio: ^5.4.0
+  web_socket_channel: ^2.4.0
 intl: ^0.19.0
 
 dev_dependencies:
