--- a/bitproject/pubspec.yaml
+++ b/bitproject/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   fl_chart: ^0.65.0
   dio: ^5.4.0
   web_socket_channel: ^2.4.0
+  webview_flutter: ^2.0.13
+  syncfusion_flutter_charts: ^25.1.38
 intl: ^0.19.0
 
 dev_dependencies:
